--- a/.github/workflows/push-image-docker.yml
+++ b/.github/workflows/push-image-docker.yml
@@ -2,7 +2,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - push-image-docker
+      - sync-file-dropbox
 
 jobs:
   build-and-push:
